# -Chinese-Calender

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  SPRINT_REPORT.md  Sprint8_Report.md  build_hko_cache.py  check_hko.py  cross_validate.py  pyproject.toml  test_ae_sun.py  test_comprehensive.py  test_results_comprehensive.md  万年历引擎_技术报告_v1.0.md  万年历引擎_技术报告_v2.0.md
chinese_calendar/: __init__.py  _version.py
chinese_calendar/api/: __init__.py  calendar_api.py  lunar_culture.py  lunar_date.py  solar_date.py
chinese_calendar/astronomy/: __init__.py  corrections.py  moon.py  solar_terms.py  sun.py
chinese_calendar/calendar/: __init__.py  chinese.py  converters.py  ganzhi.py
chinese_calendar/core/: __init__.py  constants.py  rata_die.py  time_systems.py
chinese_calendar/data/: __init__.py  cache.py  hko_cache.json  hko_cache.py  precompute.py
chinese_calendar/data/tables/: .gitkeep
chinese_calendar/inference/: __init__.py  dayun.py  relations.py  shishen.py
chinese_calendar/locale/: __init__.py  en_US.py  types.py  zh_CN.py
chinese_calendar/tests/: __init__.py  test_api.py  test_chinese.py  test_converters.py  test_data_cache.py  test_data_precompute.py  test_ganzhi.py  test_locale.py  test_moon.py  test_rata_die.py  test_solar_terms.py  test_sun.py  test_time_systems.py
docs/: DEBUGGING_RETROSPECTIVE.md  DECISIONS.md  lunar_api_reference.md
web_interface/: index.html  server.py
