[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-calendar"
version = "0.1.0"
description = "Accurate Chinese calendar engine based on Dershowitz & Reingold algorithms"
readme = "README.md"
authors = [
    {name = "Chinese Calendar Project"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
astro = [
    "pymeeus>=1.0",
]
test = [
    "pytest>=7.0",
]
dev = [
    "pymeeus>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
packages = [
    "chinese_calendar",
    "chinese_calendar.core",
    "chinese_calendar.astronomy",
    "chinese_calendar.calendar",
    "chinese_calendar.data",
    "chinese_calendar.locale",
    "chinese_calendar.api",
    "chinese_calendar.utils",
    "chinese_calendar.tests",
]

[tool.pytest.ini_options]
testpaths = ["chinese_calendar/tests"]
pythonpath = ["."]
verbosity = 2
